# myprojects

./: README.md
websocket_cpp/: CMakeLists.txt  README.md  WEBSOCKET_MASTERY.md
websocket_cpp/client/: test_client.html
websocket_cpp/src/quick_start/: beast_server.cpp
